--- a/.env.sepolia
+++ b/.env.sepolia
@@ -4,7 +4,7 @@
 OP_NODE_L1_ETH_RPC=https://rpc.sepolia.org
 
 # [required] replace with your preferred L1 CL beacon endpoint:
-OP_NODE_L1_BEACON=https://your.sepolia.beacon.node/endpoint-here
+OP_NODE_L1_BEACON=https://ethereum-sepolia-beacon-api.publicnode.com
 
 OP_NODE_ROLLUP_CONFIG=/chainconfig/sepolia/rollup.json
 OP_NODE_L2_ENGINE_AUTH=/shared/jwt.hex
