--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ./chainconfig:/chainconfig
       - ./op-geth-entrypoint.sh:/entrypoint.sh
     healthcheck:
-      start_interval: 5s
+      x-start_interval: 5s
       start_period: 240s
       test: wget --no-verbose --tries=1 --spider http://localhost:8545 || exit 1
     restart: always
@@ -38,7 +38,7 @@ services:
       - shared:/shared
       - ./chainconfig:/chainconfig
     healthcheck:
-      start_interval: 5s
+      x-start_interval: 5s
       start_period: 240s
       test: wget --no-verbose --tries=1 --spider http://localhost:9545 || exit 1
     depends_on:
